# demo1

CMakeProject1/: CMakeLists.txt
CMakeProject1/Header/: client.h  controler.h  display.h  mailSlot.h  myTime.h  network.h  pipe.h  server.h  winSock.h
CMakeProject1/Source/: client.cpp  controler.cpp  display.cpp  mailSlot.cpp  main.cpp  pipe.cpp  server.cpp  time.cpp  winSock.cpp
